Update EEG Channel Network.ipynb

--- a/EEG Channel Network_files/EEG Channel Network.ipynb
+++ b/EEG Channel Network_files/EEG Channel Network.ipynb
@@ -300,29 +300,29 @@
     "\n",
     "# Add edges to the graph based on TE_results\n",
     "for key, value in TE_results.items():\n",
-    "    source, target = key.split(\"_to_\")\n",
-    "    G.add_edge(source, target, weight=value)\n",
-    "\n",
-    "# Apply ForceAtlas2 layout algorithm for positioning\n",
-    "                     # Behavior alternatives\n",
-    "                    outboundAttractionDistribution=False,  # Dissuade hubs\n",
-    "                    linLogMode=False,  # NOT IMPLEMENTED\n",
-    "                    adjustSizes=False,  # Prevent overlap (NOT IMPLEMENTED)\n",
-    "                    edgeWeightInfluence=1.0,\n",
-    "                    \n",
-    "                    # Performance\n",
-    "                    jitterTolerance=0.5,  # Tolerance\n",
-    "                    barnesHutOptimize=True,\n",
-    "                    barnesHutTheta=0.5,\n",
-    "                    multiThreaded=False,  # NOT IMPLEMENTED\n",
-    "\n",
-    "                    # Tuning\n",
-    "                    scalingRatio=1.0,\n",
-    "                    strongGravityMode=True,\n",
-    "                    gravity=0.1,\n",
-    "\n",
-    "                    # Log\n",
-    "                    verbose=True)\n",
+        "    source, target = key.split(\"_to_\")\n",
+        "    G.add_edge(source, target, weight=value)\n",
+        "\n",
+        "# Apply ForceAtlas2 layout algorithm for positioning\n",
+        "                     # Behavior alternatives\n",
+        "    outboundAttractionDistribution=False,  # Dissuade hubs\n",
+        "    linLogMode=False,  # NOT IMPLEMENTED\n",
+        "    adjustSizes=False,  # Prevent overlap (NOT IMPLEMENTED)\n",
+        "    edgeWeightInfluence=1.0,\n",
+        "\n",
+        "                    # Performance\n",
+        "    jitterTolerance=0.5,  # Tolerance\n",
+        "    barnesHutOptimize=True,\n",
+        "    barnesHutTheta=0.5,\n",
+        "    multiThreaded=False,  # NOT IMPLEMENTED\n",
+        "\n",
+        "                    # Tuning\n",
+        "    scalingRatio=1.0,\n",
+        "    strongGravityMode=True,\n",
+        "    gravity=0.1,\n",
+        "\n",
+        "                    # Log\n",
+        "    verbose=True\n",
     "\n",
     "positions = forceatlas2.forceatlas2_networkx_layout(G, pos=None, iterations=5)\n",
     "curves = curved_edges(G, positions)\n",
